<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.mike.shareme.Create_profile"
    >

  <data>
    <variable
        name="isLoading"
        type="Boolean"
        />
  </data>
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <TextView
        android:id="@+id/txt_create_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/create_profile"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="84dp"
        />
    <TextView
        android:id="@+id/txt_enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/enter_name"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_create_profile"
        tools:layout_editor_absoluteX="66dp"
        />
    <Button
        android:id="@+id/btn_next"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:enabled="@{isLoading}"
        android:fontFamily="@font/roboto"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="282dp"
        tools:layout_editor_absoluteY="2dp"
        style="@style/ButtonBorderLess"
        />
    <co.mike.shareme.widget.CircularImageView
        android:id="@+id/img_picture"
        android:layout_width="57dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        app:civ_border_color="#c0c0c0"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toStartOf="@+id/edt_name"
        app:layout_constraintTop_toTopOf="@+id/edt_name"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="191dp"
        />
    <EditText
        android:id="@+id/edt_name"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="37dp"

        android:ems="10"
        android:hint="@string/enter_a_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_enter_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter_name"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="194dp"
        />


  </android.support.constraint.ConstraintLayout>
</layout>

